css/style.css
/* colors
#22223B - bg
#4A4E69
#9A8C98
#C9ADA7
#F2E9E4
#ffffff - font
*/
*{
    color:#F2E9E4;
}
html{
    background-color: #c9ADA7;
}
a:link{
    text-decoration: none;
}
#career > h3{
    text-align: center;
    padding: 3vh 0;
}
#career{
    background-color: #c9ADA7;
}
#main{
    
    background: #292949;
}
.navbar{
    font-weight: 700;
    background: #24243c;
    width: 100%;
    top: 0;
    position: fixed;
}

.workContent{
   
}
.workLogo{
    
}
.workTiles{
    padding: 1%;
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #746767;
    background-color: #b59b95;
}
.workTiles:hover{
    background-color: green;
    scale: 1.01;
}
.skills-div {
    margin: 0 10%;
    text-align: center;
}
.buttonToContent{
    border: 2px solid #c9ADA7;
    width: 30vh;
    text-align: center;
    padding: 1% 0;
    font-size: 3vh;
}
.buttonToContent:hover{
    border-radius: 15px;
    background-color: #c9ADA7;
}
footer{
   background-color: #22223B; 
}
#landing-div{
   background-color: #4A4E69;
   height: 100vh;
}
#skills{
   margin: 7% 0 ;
}
#projects{
    
}
.content-div{
   
    padding: 0% 3%;
}

